--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="var_datatypes.js"></script> -->
-    <script src="arrays.js"></script>
+    <script src="functions.js"></script>
+    <!-- <script src="arrays.js"></script> -->
+    <!-- <script src="operators.js"></script> -->
+    <!-- <script src="variable_datatypes.js"></script> -->
+    <!-- <script src="loops_strings.js"></script>  -->
 </head>
 <body>
     
